// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration result matches for JS 1`] = `
"{
  \\"env\\": {
    \\"browser\\": true,
    \\"es6\\": true,
    \\"node\\": true,
    \\"shared-node-browser\\": true,
    \\"jest/globals\\": true
  },
  \\"globals\\": {},
  \\"parser\\": \\"[CWD]/node_modules/@typescript-eslint/parser/dist/parser.js\\",
  \\"parserOptions\\": {
    \\"ecmaVersion\\": 2018,
    \\"sourceType\\": \\"module\\",
    \\"ecmaFeatures\\": {
      \\"jsx\\": true,
      \\"impliedStrict\\": true
    },
    \\"warnOnUnsupportedTypeScriptVersion\\": true
  },
  \\"plugins\\": [
    \\"import\\",
    \\"react\\",
    \\"jsx-a11y\\",
    \\"jest\\",
    \\"cypress\\",
    \\"prettier\\",
    \\"react-hooks\\",
    \\"@typescript-eslint\\"
  ],
  \\"rules\\": {
    \\"react-hooks/rules-of-hooks\\": [
      \\"error\\"
    ],
    \\"react-hooks/exhaustive-deps\\": [
      \\"error\\"
    ],
    \\"array-callback-return\\": [
      \\"error\\",
      {
        \\"allowImplicit\\": true
      }
    ],
    \\"default-case\\": [
      \\"error\\",
      {
        \\"commentPattern\\": \\"^no default$\\"
      }
    ],
    \\"dot-location\\": [
      \\"error\\",
      \\"property\\"
    ],
    \\"eqeqeq\\": [
      \\"error\\",
      \\"smart\\"
    ],
    \\"new-parens\\": [
      \\"error\\"
    ],
    \\"no-array-constructor\\": [
      \\"off\\"
    ],
    \\"no-caller\\": [
      \\"error\\"
    ],
    \\"no-cond-assign\\": [
      \\"error\\",
      \\"except-parens\\"
    ],
    \\"no-const-assign\\": [
      \\"error\\"
    ],
    \\"no-control-regex\\": [
      \\"error\\"
    ],
    \\"no-delete-var\\": [
      \\"error\\"
    ],
    \\"no-dupe-args\\": [
      \\"error\\"
    ],
    \\"no-dupe-class-members\\": [
      \\"error\\"
    ],
    \\"no-dupe-keys\\": [
      \\"error\\"
    ],
    \\"no-duplicate-case\\": [
      \\"error\\"
    ],
    \\"no-empty-character-class\\": [
      \\"error\\"
    ],
    \\"no-empty-pattern\\": [
      \\"error\\"
    ],
    \\"no-eval\\": [
      \\"error\\"
    ],
    \\"no-ex-assign\\": [
      \\"error\\"
    ],
    \\"no-extend-native\\": [
      \\"error\\"
    ],
    \\"no-extra-bind\\": [
      \\"error\\"
    ],
    \\"no-extra-label\\": [
      \\"error\\"
    ],
    \\"no-fallthrough\\": [
      \\"error\\"
    ],
    \\"no-func-assign\\": [
      \\"error\\"
    ],
    \\"no-implied-eval\\": [
      \\"error\\"
    ],
    \\"no-invalid-regexp\\": [
      \\"error\\"
    ],
    \\"no-iterator\\": [
      \\"error\\"
    ],
    \\"no-label-var\\": [
      \\"error\\"
    ],
    \\"no-labels\\": [
      \\"error\\",
      {
        \\"allowLoop\\": true,
        \\"allowSwitch\\": false
      }
    ],
    \\"no-lone-blocks\\": [
      \\"error\\"
    ],
    \\"no-loop-func\\": [
      \\"error\\"
    ],
    \\"no-mixed-operators\\": [
      \\"error\\",
      {
        \\"groups\\": [
          [
            \\"&\\",
            \\"|\\",
            \\"^\\",
            \\"~\\",
            \\"<<\\",
            \\">>\\",
            \\">>>\\"
          ],
          [
            \\"==\\",
            \\"!=\\",
            \\"===\\",
            \\"!==\\",
            \\">\\",
            \\">=\\",
            \\"<\\",
            \\"<=\\"
          ],
          [
            \\"&&\\",
            \\"||\\"
          ],
          [
            \\"in\\",
            \\"instanceof\\"
          ]
        ],
        \\"allowSamePrecedence\\": false
      }
    ],
    \\"no-multi-str\\": [
      \\"error\\"
    ],
    \\"no-new-func\\": [
      \\"error\\"
    ],
    \\"no-new-object\\": [
      \\"error\\"
    ],
    \\"no-new-symbol\\": [
      \\"error\\"
    ],
    \\"no-new-wrappers\\": [
      \\"error\\"
    ],
    \\"no-obj-calls\\": [
      \\"error\\"
    ],
    \\"no-octal\\": [
      \\"error\\"
    ],
    \\"no-octal-escape\\": [
      \\"error\\"
    ],
    \\"no-redeclare\\": [
      \\"error\\"
    ],
    \\"no-regex-spaces\\": [
      \\"error\\"
    ],
    \\"no-restricted-syntax\\": [
      \\"error\\",
      \\"WithStatement\\"
    ],
    \\"no-script-url\\": [
      \\"error\\"
    ],
    \\"no-self-assign\\": [
      \\"error\\",
      {
        \\"props\\": false
      }
    ],
    \\"no-self-compare\\": [
      \\"error\\"
    ],
    \\"no-sequences\\": [
      \\"error\\"
    ],
    \\"no-sparse-arrays\\": [
      \\"error\\"
    ],
    \\"no-template-curly-in-string\\": [
      \\"error\\"
    ],
    \\"no-this-before-super\\": [
      \\"error\\"
    ],
    \\"no-throw-literal\\": [
      \\"error\\"
    ],
    \\"no-undef\\": [
      \\"error\\"
    ],
    \\"no-unexpected-multiline\\": [
      \\"off\\"
    ],
    \\"no-unreachable\\": [
      \\"error\\"
    ],
    \\"no-unused-expressions\\": [
      \\"error\\",
      {
        \\"allowShortCircuit\\": true,
        \\"allowTernary\\": true,
        \\"allowTaggedTemplates\\": true
      }
    ],
    \\"no-unused-labels\\": [
      \\"error\\"
    ],
    \\"no-useless-computed-key\\": [
      \\"error\\"
    ],
    \\"no-useless-concat\\": [
      \\"error\\"
    ],
    \\"no-useless-escape\\": [
      \\"error\\"
    ],
    \\"no-useless-rename\\": [
      \\"error\\",
      {
        \\"ignoreDestructuring\\": false,
        \\"ignoreImport\\": false,
        \\"ignoreExport\\": false
      }
    ],
    \\"no-whitespace-before-property\\": [
      \\"warn\\"
    ],
    \\"require-yield\\": [
      \\"error\\"
    ],
    \\"rest-spread-spacing\\": [
      \\"error\\",
      \\"never\\"
    ],
    \\"strict\\": [
      \\"error\\",
      \\"never\\"
    ],
    \\"unicode-bom\\": [
      \\"error\\",
      \\"never\\"
    ],
    \\"use-isnan\\": [
      \\"error\\"
    ],
    \\"valid-typeof\\": [
      \\"error\\",
      {
        \\"requireStringLiterals\\": true
      }
    ],
    \\"no-restricted-properties\\": [
      \\"error\\",
      {
        \\"object\\": \\"arguments\\",
        \\"property\\": \\"callee\\",
        \\"message\\": \\"arguments.callee is deprecated\\"
      },
      {
        \\"object\\": \\"global\\",
        \\"property\\": \\"isFinite\\",
        \\"message\\": \\"Please use Number.isFinite instead\\"
      },
      {
        \\"object\\": \\"self\\",
        \\"property\\": \\"isFinite\\",
        \\"message\\": \\"Please use Number.isFinite instead\\"
      },
      {
        \\"object\\": \\"window\\",
        \\"property\\": \\"isFinite\\",
        \\"message\\": \\"Please use Number.isFinite instead\\"
      },
      {
        \\"object\\": \\"global\\",
        \\"property\\": \\"isNaN\\",
        \\"message\\": \\"Please use Number.isNaN instead\\"
      },
      {
        \\"object\\": \\"self\\",
        \\"property\\": \\"isNaN\\",
        \\"message\\": \\"Please use Number.isNaN instead\\"
      },
      {
        \\"object\\": \\"window\\",
        \\"property\\": \\"isNaN\\",
        \\"message\\": \\"Please use Number.isNaN instead\\"
      },
      {
        \\"property\\": \\"__defineGetter__\\",
        \\"message\\": \\"Please use Object.defineProperty instead.\\"
      },
      {
        \\"property\\": \\"__defineSetter__\\",
        \\"message\\": \\"Please use Object.defineProperty instead.\\"
      },
      {
        \\"object\\": \\"Math\\",
        \\"property\\": \\"pow\\",
        \\"message\\": \\"Use the exponentiation operator (**) instead.\\"
      }
    ],
    \\"getter-return\\": [
      \\"error\\",
      {
        \\"allowImplicit\\": true
      }
    ],
    \\"import/first\\": [
      \\"error\\"
    ],
    \\"import/no-amd\\": [
      \\"error\\"
    ],
    \\"import/no-webpack-loader-syntax\\": [
      \\"error\\"
    ],
    \\"react/forbid-foreign-prop-types\\": [
      \\"error\\",
      {
        \\"allowInPropTypes\\": true
      }
    ],
    \\"react/jsx-no-comment-textnodes\\": [
      \\"error\\"
    ],
    \\"react/jsx-no-duplicate-props\\": [
      \\"error\\",
      {
        \\"ignoreCase\\": true
      }
    ],
    \\"react/jsx-no-target-blank\\": [
      \\"error\\",
      {
        \\"enforceDynamicLinks\\": \\"always\\"
      }
    ],
    \\"react/jsx-no-undef\\": [
      \\"error\\"
    ],
    \\"react/jsx-pascal-case\\": [
      \\"error\\",
      {
        \\"allowAllCaps\\": true,
        \\"ignore\\": []
      }
    ],
    \\"react/jsx-uses-react\\": [
      \\"error\\"
    ],
    \\"react/jsx-uses-vars\\": [
      \\"error\\"
    ],
    \\"react/no-danger-with-children\\": [
      \\"error\\"
    ],
    \\"react/no-direct-mutation-state\\": [
      \\"error\\"
    ],
    \\"react/no-is-mounted\\": [
      \\"error\\"
    ],
    \\"react/no-typos\\": [
      \\"error\\"
    ],
    \\"react/react-in-jsx-scope\\": [
      \\"error\\"
    ],
    \\"react/require-render-return\\": [
      \\"error\\"
    ],
    \\"react/style-prop-object\\": [
      \\"off\\"
    ],
    \\"jsx-a11y/accessible-emoji\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/alt-text\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/anchor-has-content\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/anchor-is-valid\\": [
      \\"error\\",
      {
        \\"aspects\\": [
          \\"noHref\\",
          \\"invalidHref\\"
        ]
      }
    ],
    \\"jsx-a11y/aria-activedescendant-has-tabindex\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/aria-props\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/aria-proptypes\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/aria-role\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/aria-unsupported-elements\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/heading-has-content\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/iframe-has-title\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/img-redundant-alt\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-access-key\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-distracting-elements\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-redundant-roles\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/role-has-required-aria-props\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/role-supports-aria-props\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/scope\\": [
      \\"error\\"
    ],
    \\"block-scoped-var\\": [
      \\"error\\"
    ],
    \\"complexity\\": [
      \\"warn\\",
      11
    ],
    \\"consistent-return\\": [
      \\"warn\\"
    ],
    \\"curly\\": [
      \\"error\\",
      \\"multi-line\\"
    ],
    \\"dot-notation\\": [
      \\"error\\",
      {
        \\"allowKeywords\\": true,
        \\"allowPattern\\": \\"\\"
      }
    ],
    \\"guard-for-in\\": [
      \\"error\\"
    ],
    \\"no-alert\\": [
      \\"warn\\"
    ],
    \\"no-await-in-loop\\": [
      \\"error\\"
    ],
    \\"no-extra-parens\\": [
      \\"off\\",
      \\"all\\",
      {
        \\"conditionalAssign\\": true,
        \\"nestedBinaryExpressions\\": false,
        \\"returnAssign\\": false,
        \\"ignoreJSX\\": \\"all\\",
        \\"enforceForArrowConditionals\\": false
      }
    ],
    \\"no-floating-decimal\\": [
      \\"error\\"
    ],
    \\"no-global-assign\\": [
      \\"error\\",
      {
        \\"exceptions\\": []
      }
    ],
    \\"no-implicit-coercion\\": [
      \\"off\\",
      {
        \\"boolean\\": false,
        \\"number\\": true,
        \\"string\\": true,
        \\"allow\\": []
      }
    ],
    \\"no-magic-numbers\\": [
      \\"warn\\",
      {
        \\"ignore\\": [
          0,
          1,
          2,
          10
        ],
        \\"ignoreArrayIndexes\\": true,
        \\"enforceConst\\": true,
        \\"detectObjects\\": false
      }
    ],
    \\"no-multi-spaces\\": [
      \\"error\\",
      {
        \\"ignoreEOLComments\\": false
      }
    ],
    \\"no-new\\": [
      \\"error\\"
    ],
    \\"no-proto\\": [
      \\"error\\"
    ],
    \\"no-return-assign\\": [
      \\"error\\",
      \\"always\\"
    ],
    \\"no-return-await\\": [
      \\"error\\"
    ],
    \\"no-useless-return\\": [
      \\"error\\"
    ],
    \\"no-void\\": [
      \\"error\\"
    ],
    \\"prefer-promise-reject-errors\\": [
      \\"error\\",
      {
        \\"allowEmptyReject\\": true
      }
    ],
    \\"radix\\": [
      \\"error\\"
    ],
    \\"vars-on-top\\": [
      \\"error\\"
    ],
    \\"wrap-iife\\": [
      \\"error\\",
      \\"outside\\",
      {
        \\"functionPrototypeMethods\\": false
      }
    ],
    \\"yoda\\": [
      \\"error\\"
    ],
    \\"arrow-body-style\\": [
      \\"error\\",
      \\"as-needed\\",
      {
        \\"requireReturnForObjectLiteral\\": false
      }
    ],
    \\"arrow-spacing\\": [
      \\"error\\",
      {
        \\"before\\": true,
        \\"after\\": true
      }
    ],
    \\"generator-star-spacing\\": [
      \\"error\\",
      {
        \\"before\\": false,
        \\"after\\": true
      }
    ],
    \\"no-confusing-arrow\\": [
      \\"error\\",
      {
        \\"allowParens\\": true
      }
    ],
    \\"no-useless-constructor\\": [
      \\"off\\"
    ],
    \\"no-var\\": [
      \\"error\\"
    ],
    \\"object-shorthand\\": [
      \\"error\\",
      \\"always\\",
      {
        \\"ignoreConstructors\\": false,
        \\"avoidQuotes\\": true
      }
    ],
    \\"prefer-arrow-callback\\": [
      \\"warn\\",
      {
        \\"allowNamedFunctions\\": false,
        \\"allowUnboundThis\\": true
      }
    ],
    \\"prefer-const\\": [
      \\"warn\\",
      {
        \\"destructuring\\": \\"any\\",
        \\"ignoreReadBeforeAssign\\": true
      }
    ],
    \\"prefer-destructuring\\": [
      \\"warn\\",
      {
        \\"VariableDeclarator\\": {
          \\"array\\": false,
          \\"object\\": true
        },
        \\"AssignmentExpression\\": {
          \\"array\\": true,
          \\"object\\": true
        }
      },
      {
        \\"enforceForRenamedProperties\\": false
      }
    ],
    \\"prefer-numeric-literals\\": [
      \\"error\\"
    ],
    \\"prefer-rest-params\\": [
      \\"warn\\"
    ],
    \\"prefer-spread\\": [
      \\"warn\\"
    ],
    \\"prefer-template\\": [
      \\"warn\\"
    ],
    \\"symbol-description\\": [
      \\"error\\"
    ],
    \\"template-curly-spacing\\": [
      \\"error\\"
    ],
    \\"yield-star-spacing\\": [
      \\"error\\",
      \\"after\\"
    ],
    \\"import/no-named-as-default-member\\": [
      \\"error\\"
    ],
    \\"import/no-duplicates\\": [
      \\"error\\"
    ],
    \\"import/no-mutable-exports\\": [
      \\"error\\"
    ],
    \\"import/no-absolute-path\\": [
      \\"error\\"
    ],
    \\"import/no-dynamic-require\\": [
      \\"error\\"
    ],
    \\"import/no-named-default\\": [
      \\"error\\"
    ],
    \\"import/no-self-import\\": [
      \\"error\\"
    ],
    \\"import/no-useless-path-segments\\": [
      \\"error\\"
    ],
    \\"global-require\\": [
      \\"error\\"
    ],
    \\"no-buffer-constructor\\": [
      \\"error\\"
    ],
    \\"no-new-require\\": [
      \\"error\\"
    ],
    \\"no-path-concat\\": [
      \\"error\\"
    ],
    \\"no-shadow\\": [
      \\"error\\"
    ],
    \\"no-undef-init\\": [
      \\"error\\"
    ],
    \\"id-length\\": [
      \\"error\\",
      {
        \\"min\\": 4,
        \\"max\\": 40,
        \\"exceptions\\": [
          \\"i\\",
          \\"l\\",
          \\"id\\",
          \\"fs\\",
          \\"url\\",
          \\"uri\\",
          \\"map\\",
          \\"env\\",
          \\"err\\",
          \\"req\\",
          \\"res\\",
          \\"now\\",
          \\"raw\\",
          \\"key\\",
          \\"val\\",
          \\"obj\\",
          \\"pos\\",
          \\"row\\",
          \\"col\\",
          \\"min\\",
          \\"max\\",
          \\"CWD\\",
          \\"pkg\\",
          \\"css\\",
          \\"app\\",
          \\"api\\",
          \\"cli\\",
          \\"App\\",
          \\"API\\"
        ],
        \\"properties\\": \\"never\\"
      }
    ],
    \\"linebreak-style\\": [
      \\"error\\",
      \\"unix\\"
    ],
    \\"max-depth\\": [
      \\"error\\",
      {
        \\"maximum\\": 3
      }
    ],
    \\"max-len\\": [
      \\"error\\",
      {
        \\"code\\": 100,
        \\"comments\\": 140,
        \\"ignoreUrls\\": true,
        \\"tabWidth\\": 2
      }
    ],
    \\"max-params\\": [
      \\"error\\",
      3
    ],
    \\"max-statements\\": [
      \\"error\\",
      30,
      {
        \\"ignoreTopLevelFunctions\\": true
      }
    ],
    \\"max-statements-per-line\\": [
      \\"error\\",
      {
        \\"max\\": 2
      }
    ],
    \\"no-div-regex\\": [
      \\"error\\"
    ],
    \\"no-duplicate-imports\\": [
      \\"error\\"
    ],
    \\"no-extra-semi\\": [
      \\"error\\"
    ],
    \\"no-mixed-spaces-and-tabs\\": [
      \\"error\\"
    ],
    \\"no-nested-ternary\\": [
      \\"error\\"
    ],
    \\"no-param-reassign\\": [
      \\"error\\"
    ],
    \\"no-unmodified-loop-condition\\": [
      \\"error\\"
    ],
    \\"no-unneeded-ternary\\": [
      \\"error\\"
    ],
    \\"no-unused-vars\\": [
      \\"off\\"
    ],
    \\"no-use-before-define\\": [
      \\"off\\"
    ],
    \\"array-bracket-spacing\\": [
      \\"warn\\",
      \\"always\\",
      {
        \\"objectsInArrays\\": false
      }
    ],
    \\"arrow-parens\\": [
      \\"warn\\",
      \\"always\\"
    ],
    \\"camelcase\\": [
      \\"warn\\"
    ],
    \\"comma-dangle\\": [
      \\"warn\\",
      \\"never\\"
    ],
    \\"comma-style\\": [
      \\"warn\\",
      \\"last\\"
    ],
    \\"func-names\\": [
      \\"warn\\",
      \\"as-needed\\"
    ],
    \\"func-style\\": [
      \\"warn\\",
      \\"declaration\\",
      {
        \\"allowArrowFunctions\\": true
      }
    ],
    \\"indent\\": [
      \\"warn\\",
      2,
      {
        \\"SwitchCase\\": 1,
        \\"VariableDeclarator\\": 1,
        \\"outerIIFEBody\\": 0,
        \\"MemberExpression\\": 1,
        \\"FunctionExpression\\": {
          \\"body\\": 1,
          \\"parameters\\": 1
        },
        \\"CallExpression\\": {
          \\"arguments\\": 1
        },
        \\"flatTernaryExpressions\\": false,
        \\"ignoreComments\\": false
      }
    ],
    \\"no-multiple-empty-lines\\": [
      \\"warn\\",
      {
        \\"max\\": 4,
        \\"maxEOF\\": 1,
        \\"maxBOF\\": 0
      }
    ],
    \\"no-trailing-spaces\\": [
      \\"warn\\"
    ],
    \\"object-curly-spacing\\": [
      \\"warn\\",
      \\"always\\"
    ],
    \\"object-property-newline\\": [
      \\"warn\\",
      {
        \\"allowMultiplePropertiesPerLine\\": true,
        \\"allowAllPropertiesOnSameLine\\": false
      }
    ],
    \\"one-var-declaration-per-line\\": [
      \\"warn\\",
      \\"initializations\\"
    ],
    \\"operator-assignment\\": [
      \\"warn\\"
    ],
    \\"operator-linebreak\\": [
      \\"warn\\",
      \\"after\\"
    ],
    \\"semi\\": [
      \\"warn\\",
      \\"never\\"
    ],
    \\"space-before-function-paren\\": [
      \\"warn\\",
      {
        \\"named\\": \\"never\\",
        \\"anonymous\\": \\"never\\",
        \\"asyncArrow\\": \\"always\\"
      }
    ],
    \\"spaced-comment\\": [
      \\"warn\\",
      \\"always\\",
      {
        \\"exceptions\\": [
          \\"*\\",
          \\"=\\",
          \\"-\\"
        ]
      }
    ],
    \\"jsx-quotes\\": [
      \\"error\\",
      \\"prefer-double\\"
    ],
    \\"jsx-a11y/label-has-associated-control\\": [
      \\"error\\"
    ],
    \\"react/jsx-closing-bracket-location\\": [
      \\"error\\",
      \\"line-aligned\\"
    ],
    \\"react/jsx-closing-tag-location\\": [
      \\"error\\"
    ],
    \\"react/jsx-curly-spacing\\": [
      \\"error\\",
      \\"never\\",
      {
        \\"allowMultiline\\": true
      }
    ],
    \\"react/jsx-equals-spacing\\": [
      \\"error\\",
      \\"never\\"
    ],
    \\"react/jsx-first-prop-new-line\\": [
      \\"error\\",
      \\"multiline-multiprop\\"
    ],
    \\"react/jsx-indent\\": [
      \\"error\\",
      2
    ],
    \\"react/jsx-indent-props\\": [
      \\"error\\",
      2
    ],
    \\"react/jsx-max-props-per-line\\": [
      \\"error\\",
      {
        \\"maximum\\": 1,
        \\"when\\": \\"multiline\\"
      }
    ],
    \\"react/jsx-one-expression-per-line\\": [
      \\"error\\",
      {
        \\"allow\\": \\"single-child\\"
      }
    ],
    \\"react/jsx-props-no-multi-spaces\\": [
      \\"error\\"
    ],
    \\"react/jsx-tag-spacing\\": [
      \\"error\\",
      {
        \\"closingSlash\\": \\"never\\",
        \\"beforeSelfClosing\\": \\"always\\",
        \\"afterOpening\\": \\"never\\",
        \\"beforeClosing\\": \\"never\\"
      }
    ],
    \\"react/jsx-wrap-multilines\\": [
      \\"error\\",
      {
        \\"declaration\\": \\"parens-new-line\\",
        \\"assignment\\": \\"parens-new-line\\",
        \\"return\\": \\"parens-new-line\\",
        \\"arrow\\": \\"parens-new-line\\",
        \\"condition\\": \\"parens-new-line\\",
        \\"logical\\": \\"parens-new-line\\",
        \\"prop\\": \\"parens-new-line\\"
      }
    ],
    \\"react/self-closing-comp\\": [
      \\"error\\"
    ],
    \\"react/forbid-prop-types\\": [
      \\"error\\",
      {
        \\"forbid\\": [
          \\"any\\",
          \\"array\\",
          \\"object\\"
        ],
        \\"checkContextTypes\\": true,
        \\"checkChildContextTypes\\": true
      }
    ],
    \\"react/jsx-boolean-value\\": [
      \\"error\\",
      \\"never\\",
      {
        \\"always\\": []
      }
    ],
    \\"react/jsx-no-bind\\": [
      \\"error\\",
      {
        \\"ignoreRefs\\": true,
        \\"allowArrowFunctions\\": true,
        \\"allowFunctions\\": false,
        \\"allowBind\\": false,
        \\"ignoreDOMComponents\\": true
      }
    ],
    \\"react/no-danger\\": [
      \\"warn\\"
    ],
    \\"react/no-did-update-set-state\\": [
      \\"error\\"
    ],
    \\"react/no-will-update-set-state\\": [
      \\"error\\"
    ],
    \\"react/prefer-es6-class\\": [
      \\"error\\",
      \\"always\\"
    ],
    \\"react/prefer-stateless-function\\": [
      \\"warn\\",
      {
        \\"ignorePureComponents\\": true
      }
    ],
    \\"react/no-unused-prop-types\\": [
      \\"error\\",
      {
        \\"customValidators\\": [],
        \\"skipShapeProps\\": true
      }
    ],
    \\"react/no-array-index-key\\": [
      \\"error\\"
    ],
    \\"react/require-default-props\\": [
      \\"error\\",
      {
        \\"forbidDefaultForRequired\\": true
      }
    ],
    \\"react/void-dom-elements-no-children\\": [
      \\"error\\"
    ],
    \\"react/default-props-match-prop-types\\": [
      \\"error\\",
      {
        \\"allowRequiredDefaults\\": false
      }
    ],
    \\"react/no-redundant-should-component-update\\": [
      \\"error\\"
    ],
    \\"react/no-unused-state\\": [
      \\"error\\"
    ],
    \\"react/jsx-curly-brace-presence\\": [
      \\"error\\",
      {
        \\"props\\": \\"never\\",
        \\"children\\": \\"never\\"
      }
    ],
    \\"react/no-access-state-in-setstate\\": [
      \\"error\\"
    ],
    \\"react/button-has-type\\": [
      \\"error\\",
      {
        \\"button\\": true,
        \\"submit\\": true,
        \\"reset\\": false
      }
    ],
    \\"react/no-this-in-sfc\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/lang\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-angle-bracket-type-assertion\\": [
      \\"warn\\"
    ],
    \\"@typescript-eslint/no-array-constructor\\": [
      \\"warn\\"
    ],
    \\"@typescript-eslint/no-namespace\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-use-before-define\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/no-unused-vars\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/no-useless-constructor\\": [
      \\"warn\\"
    ],
    \\"react/prop-types\\": [
      \\"off\\"
    ],
    \\"import/export\\": [
      \\"off\\"
    ],
    \\"import/named\\": [
      \\"off\\"
    ],
    \\"no-restricted-globals\\": [
      \\"error\\",
      \\"addEventListener\\",
      \\"blur\\",
      \\"close\\",
      \\"closed\\",
      \\"confirm\\",
      \\"defaultStatus\\",
      \\"defaultstatus\\",
      \\"event\\",
      \\"external\\",
      \\"find\\",
      \\"focus\\",
      \\"frameElement\\",
      \\"frames\\",
      \\"history\\",
      \\"innerHeight\\",
      \\"innerWidth\\",
      \\"length\\",
      \\"location\\",
      \\"locationbar\\",
      \\"menubar\\",
      \\"moveBy\\",
      \\"moveTo\\",
      \\"name\\",
      \\"onblur\\",
      \\"onerror\\",
      \\"onfocus\\",
      \\"onload\\",
      \\"onresize\\",
      \\"onunload\\",
      \\"open\\",
      \\"opener\\",
      \\"opera\\",
      \\"outerHeight\\",
      \\"outerWidth\\",
      \\"pageXOffset\\",
      \\"pageYOffset\\",
      \\"parent\\",
      \\"print\\",
      \\"removeEventListener\\",
      \\"resizeBy\\",
      \\"resizeTo\\",
      \\"screen\\",
      \\"screenLeft\\",
      \\"screenTop\\",
      \\"screenX\\",
      \\"screenY\\",
      \\"scroll\\",
      \\"scrollbars\\",
      \\"scrollBy\\",
      \\"scrollTo\\",
      \\"scrollX\\",
      \\"scrollY\\",
      \\"self\\",
      \\"status\\",
      \\"statusbar\\",
      \\"stop\\",
      \\"toolbar\\",
      \\"top\\"
    ],
    \\"sort-imports\\": [
      \\"error\\",
      {
        \\"ignoreDeclarationSort\\": true,
        \\"ignoreCase\\": false,
        \\"ignoreMemberSort\\": false
      }
    ],
    \\"import/order\\": [
      \\"error\\"
    ],
    \\"import/newline-after-import\\": [
      \\"error\\"
    ],
    \\"import/default\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/no-object-literal-type-assertion\\": [
      \\"off\\"
    ],
    \\"react/jsx-child-element-spacing\\": [
      \\"off\\"
    ],
    \\"react/jsx-space-before-closing\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/func-call-spacing\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/indent\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/member-delimiter-style\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/no-extra-parens\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/semi\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/type-annotation-spacing\\": [
      \\"off\\"
    ],
    \\"lines-around-comment\\": [
      0
    ],
    \\"no-tabs\\": [
      0
    ],
    \\"quotes\\": [
      0
    ],
    \\"array-bracket-newline\\": [
      \\"off\\"
    ],
    \\"array-element-newline\\": [
      \\"off\\"
    ],
    \\"block-spacing\\": [
      \\"off\\"
    ],
    \\"brace-style\\": [
      \\"off\\"
    ],
    \\"comma-spacing\\": [
      \\"off\\"
    ],
    \\"computed-property-spacing\\": [
      \\"off\\"
    ],
    \\"eol-last\\": [
      \\"off\\"
    ],
    \\"func-call-spacing\\": [
      \\"off\\"
    ],
    \\"function-paren-newline\\": [
      \\"off\\"
    ],
    \\"generator-star\\": [
      \\"off\\"
    ],
    \\"implicit-arrow-linebreak\\": [
      \\"off\\"
    ],
    \\"indent-legacy\\": [
      \\"off\\"
    ],
    \\"key-spacing\\": [
      \\"off\\"
    ],
    \\"keyword-spacing\\": [
      \\"off\\"
    ],
    \\"multiline-ternary\\": [
      \\"off\\"
    ],
    \\"newline-per-chained-call\\": [
      \\"off\\"
    ],
    \\"no-arrow-condition\\": [
      \\"off\\"
    ],
    \\"no-comma-dangle\\": [
      \\"off\\"
    ],
    \\"no-reserved-keys\\": [
      \\"off\\"
    ],
    \\"no-space-before-semi\\": [
      \\"off\\"
    ],
    \\"no-spaced-func\\": [
      \\"off\\"
    ],
    \\"no-wrap-func\\": [
      \\"off\\"
    ],
    \\"nonblock-statement-body-position\\": [
      \\"off\\"
    ],
    \\"object-curly-newline\\": [
      \\"off\\"
    ],
    \\"padded-blocks\\": [
      \\"off\\"
    ],
    \\"quote-props\\": [
      \\"off\\"
    ],
    \\"semi-spacing\\": [
      \\"off\\"
    ],
    \\"semi-style\\": [
      \\"off\\"
    ],
    \\"space-after-function-name\\": [
      \\"off\\"
    ],
    \\"space-after-keywords\\": [
      \\"off\\"
    ],
    \\"space-before-blocks\\": [
      \\"off\\"
    ],
    \\"space-before-function-parentheses\\": [
      \\"off\\"
    ],
    \\"space-before-keywords\\": [
      \\"off\\"
    ],
    \\"space-in-brackets\\": [
      \\"off\\"
    ],
    \\"space-in-parens\\": [
      \\"off\\"
    ],
    \\"space-infix-ops\\": [
      \\"off\\"
    ],
    \\"space-return-throw-case\\": [
      \\"off\\"
    ],
    \\"space-unary-ops\\": [
      \\"off\\"
    ],
    \\"space-unary-word-ops\\": [
      \\"off\\"
    ],
    \\"switch-colon-spacing\\": [
      \\"off\\"
    ],
    \\"template-tag-spacing\\": [
      \\"off\\"
    ],
    \\"wrap-regex\\": [
      \\"off\\"
    ],
    \\"cypress/no-assigning-return-values\\": [
      \\"error\\"
    ],
    \\"cypress/no-unnecessary-waiting\\": [
      \\"error\\"
    ],
    \\"jest/no-alias-methods\\": [
      \\"warn\\"
    ],
    \\"jest/no-disabled-tests\\": [
      \\"warn\\"
    ],
    \\"jest/no-focused-tests\\": [
      \\"error\\"
    ],
    \\"jest/no-identical-title\\": [
      \\"error\\"
    ],
    \\"jest/no-jest-import\\": [
      \\"error\\"
    ],
    \\"jest/no-jasmine-globals\\": [
      \\"warn\\"
    ],
    \\"jest/no-test-prefixes\\": [
      \\"error\\"
    ],
    \\"jest/valid-describe\\": [
      \\"error\\"
    ],
    \\"jest/valid-expect\\": [
      \\"error\\"
    ],
    \\"jest/valid-expect-in-promise\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/click-events-have-key-events\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/control-has-associated-label\\": [
      \\"off\\",
      {
        \\"ignoreElements\\": [
          \\"audio\\",
          \\"canvas\\",
          \\"embed\\",
          \\"input\\",
          \\"textarea\\",
          \\"tr\\",
          \\"video\\"
        ],
        \\"ignoreRoles\\": [
          \\"grid\\",
          \\"listbox\\",
          \\"menu\\",
          \\"menubar\\",
          \\"radiogroup\\",
          \\"row\\",
          \\"tablist\\",
          \\"toolbar\\",
          \\"tree\\",
          \\"treegrid\\"
        ],
        \\"includeRoles\\": [
          \\"alert\\",
          \\"dialog\\"
        ]
      }
    ],
    \\"jsx-a11y/html-has-lang\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/interactive-supports-focus\\": [
      \\"error\\",
      {
        \\"tabbable\\": [
          \\"button\\",
          \\"checkbox\\",
          \\"link\\",
          \\"searchbox\\",
          \\"spinbutton\\",
          \\"switch\\",
          \\"textbox\\"
        ]
      }
    ],
    \\"jsx-a11y/label-has-for\\": [
      \\"off\\"
    ],
    \\"jsx-a11y/media-has-caption\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/mouse-events-have-key-events\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-autofocus\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-interactive-element-to-noninteractive-role\\": [
      \\"error\\",
      {
        \\"tr\\": [
          \\"none\\",
          \\"presentation\\"
        ]
      }
    ],
    \\"jsx-a11y/no-noninteractive-element-interactions\\": [
      \\"error\\",
      {
        \\"handlers\\": [
          \\"onClick\\",
          \\"onError\\",
          \\"onLoad\\",
          \\"onMouseDown\\",
          \\"onMouseUp\\",
          \\"onKeyPress\\",
          \\"onKeyDown\\",
          \\"onKeyUp\\"
        ],
        \\"alert\\": [
          \\"onKeyUp\\",
          \\"onKeyDown\\",
          \\"onKeyPress\\"
        ],
        \\"body\\": [
          \\"onError\\",
          \\"onLoad\\"
        ],
        \\"dialog\\": [
          \\"onKeyUp\\",
          \\"onKeyDown\\",
          \\"onKeyPress\\"
        ],
        \\"iframe\\": [
          \\"onError\\",
          \\"onLoad\\"
        ],
        \\"img\\": [
          \\"onError\\",
          \\"onLoad\\"
        ]
      }
    ],
    \\"jsx-a11y/no-noninteractive-element-to-interactive-role\\": [
      \\"error\\",
      {
        \\"ul\\": [
          \\"listbox\\",
          \\"menu\\",
          \\"menubar\\",
          \\"radiogroup\\",
          \\"tablist\\",
          \\"tree\\",
          \\"treegrid\\"
        ],
        \\"ol\\": [
          \\"listbox\\",
          \\"menu\\",
          \\"menubar\\",
          \\"radiogroup\\",
          \\"tablist\\",
          \\"tree\\",
          \\"treegrid\\"
        ],
        \\"li\\": [
          \\"menuitem\\",
          \\"option\\",
          \\"row\\",
          \\"tab\\",
          \\"treeitem\\"
        ],
        \\"table\\": [
          \\"grid\\"
        ],
        \\"td\\": [
          \\"gridcell\\"
        ]
      }
    ],
    \\"jsx-a11y/no-noninteractive-tabindex\\": [
      \\"error\\",
      {
        \\"tags\\": [],
        \\"roles\\": [
          \\"tabpanel\\"
        ]
      }
    ],
    \\"jsx-a11y/no-onchange\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-static-element-interactions\\": [
      \\"error\\",
      {
        \\"handlers\\": [
          \\"onClick\\",
          \\"onMouseDown\\",
          \\"onMouseUp\\",
          \\"onKeyPress\\",
          \\"onKeyDown\\",
          \\"onKeyUp\\"
        ]
      }
    ],
    \\"jsx-a11y/tabindex-no-positive\\": [
      \\"error\\"
    ],
    \\"react/display-name\\": [
      2
    ],
    \\"react/jsx-key\\": [
      2
    ],
    \\"react/no-children-prop\\": [
      2
    ],
    \\"react/no-deprecated\\": [
      2
    ],
    \\"react/no-find-dom-node\\": [
      2
    ],
    \\"react/no-render-return-value\\": [
      2
    ],
    \\"react/no-string-refs\\": [
      2
    ],
    \\"react/no-unescaped-entities\\": [
      2
    ],
    \\"react/no-unknown-property\\": [
      2
    ],
    \\"react/no-unsafe\\": [
      0
    ],
    \\"import/no-named-as-default\\": [
      1
    ],
    \\"import/no-unresolved\\": [
      2
    ],
    \\"import/namespace\\": [
      2
    ],
    \\"@typescript-eslint/adjacent-overload-signatures\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/array-type\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/ban-types\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/camelcase\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/class-name-casing\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/explicit-function-return-type\\": [
      \\"warn\\"
    ],
    \\"@typescript-eslint/explicit-member-accessibility\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/interface-name-prefix\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-empty-interface\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-explicit-any\\": [
      \\"warn\\"
    ],
    \\"@typescript-eslint/no-inferrable-types\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-misused-new\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-non-null-assertion\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-parameter-properties\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-triple-slash-reference\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-var-requires\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/prefer-interface\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/prefer-namespace-keyword\\": [
      \\"error\\"
    ],
    \\"constructor-super\\": [
      \\"error\\"
    ],
    \\"for-direction\\": [
      \\"error\\"
    ],
    \\"no-async-promise-executor\\": [
      \\"error\\"
    ],
    \\"no-case-declarations\\": [
      \\"error\\"
    ],
    \\"no-class-assign\\": [
      \\"error\\"
    ],
    \\"no-compare-neg-zero\\": [
      \\"error\\"
    ],
    \\"no-constant-condition\\": [
      \\"error\\"
    ],
    \\"no-debugger\\": [
      \\"error\\"
    ],
    \\"no-empty\\": [
      \\"error\\"
    ],
    \\"no-extra-boolean-cast\\": [
      \\"error\\"
    ],
    \\"no-inner-declarations\\": [
      \\"error\\"
    ],
    \\"no-irregular-whitespace\\": [
      \\"error\\"
    ],
    \\"no-misleading-character-class\\": [
      \\"error\\"
    ],
    \\"no-prototype-builtins\\": [
      \\"error\\"
    ],
    \\"no-shadow-restricted-names\\": [
      \\"error\\"
    ],
    \\"no-unsafe-finally\\": [
      \\"error\\"
    ],
    \\"no-unsafe-negation\\": [
      \\"error\\"
    ],
    \\"no-useless-catch\\": [
      \\"error\\"
    ],
    \\"no-with\\": [
      \\"error\\"
    ],
    \\"require-atomic-updates\\": [
      \\"error\\"
    ]
  },
  \\"settings\\": {
    \\"import/resolver\\": {
      \\"babel-module\\": {
        \\"extensions\\": [
          \\".js\\",
          \\".jsx\\",
          \\".ts\\",
          \\".tsx\\",
          \\".json\\"
        ],
        \\"alias\\": {
          \\"-\\": \\"./src/\\"
        }
      },
      \\"node\\": {
        \\"extensions\\": [
          \\".js\\",
          \\".jsx\\",
          \\".ts\\",
          \\".tsx\\"
        ]
      }
    },
    \\"import/parsers\\": {
      \\"@typescript-eslint/parser\\": [
        \\".ts\\",
        \\".tsx\\"
      ]
    },
    \\"react\\": {
      \\"version\\": \\"detect\\"
    },
    \\"import/extensions\\": [
      \\".js\\",
      \\".jsx\\",
      \\".ts\\",
      \\".tsx\\"
    ]
  }
}"
`;

exports[`configuration result matches for TS 1`] = `
"{
  \\"env\\": {
    \\"browser\\": true,
    \\"es6\\": true,
    \\"node\\": true,
    \\"shared-node-browser\\": true,
    \\"jest/globals\\": true
  },
  \\"globals\\": {},
  \\"parser\\": \\"[CWD]/node_modules/@typescript-eslint/parser/dist/parser.js\\",
  \\"parserOptions\\": {
    \\"ecmaVersion\\": 2018,
    \\"sourceType\\": \\"module\\",
    \\"ecmaFeatures\\": {
      \\"jsx\\": true,
      \\"impliedStrict\\": true
    },
    \\"warnOnUnsupportedTypeScriptVersion\\": true
  },
  \\"plugins\\": [
    \\"import\\",
    \\"react\\",
    \\"jsx-a11y\\",
    \\"jest\\",
    \\"cypress\\",
    \\"prettier\\",
    \\"react-hooks\\",
    \\"@typescript-eslint\\"
  ],
  \\"rules\\": {
    \\"react-hooks/rules-of-hooks\\": [
      \\"error\\"
    ],
    \\"react-hooks/exhaustive-deps\\": [
      \\"error\\"
    ],
    \\"array-callback-return\\": [
      \\"error\\",
      {
        \\"allowImplicit\\": true
      }
    ],
    \\"default-case\\": [
      \\"error\\",
      {
        \\"commentPattern\\": \\"^no default$\\"
      }
    ],
    \\"dot-location\\": [
      \\"error\\",
      \\"property\\"
    ],
    \\"eqeqeq\\": [
      \\"error\\",
      \\"smart\\"
    ],
    \\"new-parens\\": [
      \\"error\\"
    ],
    \\"no-array-constructor\\": [
      \\"off\\"
    ],
    \\"no-caller\\": [
      \\"error\\"
    ],
    \\"no-cond-assign\\": [
      \\"error\\",
      \\"except-parens\\"
    ],
    \\"no-const-assign\\": [
      \\"error\\"
    ],
    \\"no-control-regex\\": [
      \\"error\\"
    ],
    \\"no-delete-var\\": [
      \\"error\\"
    ],
    \\"no-dupe-args\\": [
      \\"error\\"
    ],
    \\"no-dupe-class-members\\": [
      \\"error\\"
    ],
    \\"no-dupe-keys\\": [
      \\"error\\"
    ],
    \\"no-duplicate-case\\": [
      \\"error\\"
    ],
    \\"no-empty-character-class\\": [
      \\"error\\"
    ],
    \\"no-empty-pattern\\": [
      \\"error\\"
    ],
    \\"no-eval\\": [
      \\"error\\"
    ],
    \\"no-ex-assign\\": [
      \\"error\\"
    ],
    \\"no-extend-native\\": [
      \\"error\\"
    ],
    \\"no-extra-bind\\": [
      \\"error\\"
    ],
    \\"no-extra-label\\": [
      \\"error\\"
    ],
    \\"no-fallthrough\\": [
      \\"error\\"
    ],
    \\"no-func-assign\\": [
      \\"error\\"
    ],
    \\"no-implied-eval\\": [
      \\"error\\"
    ],
    \\"no-invalid-regexp\\": [
      \\"error\\"
    ],
    \\"no-iterator\\": [
      \\"error\\"
    ],
    \\"no-label-var\\": [
      \\"error\\"
    ],
    \\"no-labels\\": [
      \\"error\\",
      {
        \\"allowLoop\\": true,
        \\"allowSwitch\\": false
      }
    ],
    \\"no-lone-blocks\\": [
      \\"error\\"
    ],
    \\"no-loop-func\\": [
      \\"error\\"
    ],
    \\"no-mixed-operators\\": [
      \\"error\\",
      {
        \\"groups\\": [
          [
            \\"&\\",
            \\"|\\",
            \\"^\\",
            \\"~\\",
            \\"<<\\",
            \\">>\\",
            \\">>>\\"
          ],
          [
            \\"==\\",
            \\"!=\\",
            \\"===\\",
            \\"!==\\",
            \\">\\",
            \\">=\\",
            \\"<\\",
            \\"<=\\"
          ],
          [
            \\"&&\\",
            \\"||\\"
          ],
          [
            \\"in\\",
            \\"instanceof\\"
          ]
        ],
        \\"allowSamePrecedence\\": false
      }
    ],
    \\"no-multi-str\\": [
      \\"error\\"
    ],
    \\"no-new-func\\": [
      \\"error\\"
    ],
    \\"no-new-object\\": [
      \\"error\\"
    ],
    \\"no-new-symbol\\": [
      \\"error\\"
    ],
    \\"no-new-wrappers\\": [
      \\"error\\"
    ],
    \\"no-obj-calls\\": [
      \\"error\\"
    ],
    \\"no-octal\\": [
      \\"error\\"
    ],
    \\"no-octal-escape\\": [
      \\"error\\"
    ],
    \\"no-redeclare\\": [
      \\"error\\"
    ],
    \\"no-regex-spaces\\": [
      \\"error\\"
    ],
    \\"no-restricted-syntax\\": [
      \\"error\\",
      \\"WithStatement\\"
    ],
    \\"no-script-url\\": [
      \\"error\\"
    ],
    \\"no-self-assign\\": [
      \\"error\\",
      {
        \\"props\\": false
      }
    ],
    \\"no-self-compare\\": [
      \\"error\\"
    ],
    \\"no-sequences\\": [
      \\"error\\"
    ],
    \\"no-sparse-arrays\\": [
      \\"error\\"
    ],
    \\"no-template-curly-in-string\\": [
      \\"error\\"
    ],
    \\"no-this-before-super\\": [
      \\"error\\"
    ],
    \\"no-throw-literal\\": [
      \\"error\\"
    ],
    \\"no-undef\\": [
      \\"error\\"
    ],
    \\"no-unexpected-multiline\\": [
      \\"off\\"
    ],
    \\"no-unreachable\\": [
      \\"error\\"
    ],
    \\"no-unused-expressions\\": [
      \\"error\\",
      {
        \\"allowShortCircuit\\": true,
        \\"allowTernary\\": true,
        \\"allowTaggedTemplates\\": true
      }
    ],
    \\"no-unused-labels\\": [
      \\"error\\"
    ],
    \\"no-useless-computed-key\\": [
      \\"error\\"
    ],
    \\"no-useless-concat\\": [
      \\"error\\"
    ],
    \\"no-useless-escape\\": [
      \\"error\\"
    ],
    \\"no-useless-rename\\": [
      \\"error\\",
      {
        \\"ignoreDestructuring\\": false,
        \\"ignoreImport\\": false,
        \\"ignoreExport\\": false
      }
    ],
    \\"no-whitespace-before-property\\": [
      \\"warn\\"
    ],
    \\"require-yield\\": [
      \\"error\\"
    ],
    \\"rest-spread-spacing\\": [
      \\"error\\",
      \\"never\\"
    ],
    \\"strict\\": [
      \\"error\\",
      \\"never\\"
    ],
    \\"unicode-bom\\": [
      \\"error\\",
      \\"never\\"
    ],
    \\"use-isnan\\": [
      \\"error\\"
    ],
    \\"valid-typeof\\": [
      \\"error\\",
      {
        \\"requireStringLiterals\\": true
      }
    ],
    \\"no-restricted-properties\\": [
      \\"error\\",
      {
        \\"object\\": \\"arguments\\",
        \\"property\\": \\"callee\\",
        \\"message\\": \\"arguments.callee is deprecated\\"
      },
      {
        \\"object\\": \\"global\\",
        \\"property\\": \\"isFinite\\",
        \\"message\\": \\"Please use Number.isFinite instead\\"
      },
      {
        \\"object\\": \\"self\\",
        \\"property\\": \\"isFinite\\",
        \\"message\\": \\"Please use Number.isFinite instead\\"
      },
      {
        \\"object\\": \\"window\\",
        \\"property\\": \\"isFinite\\",
        \\"message\\": \\"Please use Number.isFinite instead\\"
      },
      {
        \\"object\\": \\"global\\",
        \\"property\\": \\"isNaN\\",
        \\"message\\": \\"Please use Number.isNaN instead\\"
      },
      {
        \\"object\\": \\"self\\",
        \\"property\\": \\"isNaN\\",
        \\"message\\": \\"Please use Number.isNaN instead\\"
      },
      {
        \\"object\\": \\"window\\",
        \\"property\\": \\"isNaN\\",
        \\"message\\": \\"Please use Number.isNaN instead\\"
      },
      {
        \\"property\\": \\"__defineGetter__\\",
        \\"message\\": \\"Please use Object.defineProperty instead.\\"
      },
      {
        \\"property\\": \\"__defineSetter__\\",
        \\"message\\": \\"Please use Object.defineProperty instead.\\"
      },
      {
        \\"object\\": \\"Math\\",
        \\"property\\": \\"pow\\",
        \\"message\\": \\"Use the exponentiation operator (**) instead.\\"
      }
    ],
    \\"getter-return\\": [
      \\"error\\",
      {
        \\"allowImplicit\\": true
      }
    ],
    \\"import/first\\": [
      \\"error\\"
    ],
    \\"import/no-amd\\": [
      \\"error\\"
    ],
    \\"import/no-webpack-loader-syntax\\": [
      \\"error\\"
    ],
    \\"react/forbid-foreign-prop-types\\": [
      \\"error\\",
      {
        \\"allowInPropTypes\\": true
      }
    ],
    \\"react/jsx-no-comment-textnodes\\": [
      \\"error\\"
    ],
    \\"react/jsx-no-duplicate-props\\": [
      \\"error\\",
      {
        \\"ignoreCase\\": true
      }
    ],
    \\"react/jsx-no-target-blank\\": [
      \\"error\\",
      {
        \\"enforceDynamicLinks\\": \\"always\\"
      }
    ],
    \\"react/jsx-no-undef\\": [
      \\"error\\"
    ],
    \\"react/jsx-pascal-case\\": [
      \\"error\\",
      {
        \\"allowAllCaps\\": true,
        \\"ignore\\": []
      }
    ],
    \\"react/jsx-uses-react\\": [
      \\"error\\"
    ],
    \\"react/jsx-uses-vars\\": [
      \\"error\\"
    ],
    \\"react/no-danger-with-children\\": [
      \\"error\\"
    ],
    \\"react/no-direct-mutation-state\\": [
      \\"error\\"
    ],
    \\"react/no-is-mounted\\": [
      \\"error\\"
    ],
    \\"react/no-typos\\": [
      \\"error\\"
    ],
    \\"react/react-in-jsx-scope\\": [
      \\"error\\"
    ],
    \\"react/require-render-return\\": [
      \\"error\\"
    ],
    \\"react/style-prop-object\\": [
      \\"off\\"
    ],
    \\"jsx-a11y/accessible-emoji\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/alt-text\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/anchor-has-content\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/anchor-is-valid\\": [
      \\"error\\",
      {
        \\"aspects\\": [
          \\"noHref\\",
          \\"invalidHref\\"
        ]
      }
    ],
    \\"jsx-a11y/aria-activedescendant-has-tabindex\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/aria-props\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/aria-proptypes\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/aria-role\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/aria-unsupported-elements\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/heading-has-content\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/iframe-has-title\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/img-redundant-alt\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-access-key\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-distracting-elements\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-redundant-roles\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/role-has-required-aria-props\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/role-supports-aria-props\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/scope\\": [
      \\"error\\"
    ],
    \\"block-scoped-var\\": [
      \\"error\\"
    ],
    \\"complexity\\": [
      \\"warn\\",
      11
    ],
    \\"consistent-return\\": [
      \\"warn\\"
    ],
    \\"curly\\": [
      \\"error\\",
      \\"multi-line\\"
    ],
    \\"dot-notation\\": [
      \\"error\\",
      {
        \\"allowKeywords\\": true,
        \\"allowPattern\\": \\"\\"
      }
    ],
    \\"guard-for-in\\": [
      \\"error\\"
    ],
    \\"no-alert\\": [
      \\"warn\\"
    ],
    \\"no-await-in-loop\\": [
      \\"error\\"
    ],
    \\"no-extra-parens\\": [
      \\"off\\",
      \\"all\\",
      {
        \\"conditionalAssign\\": true,
        \\"nestedBinaryExpressions\\": false,
        \\"returnAssign\\": false,
        \\"ignoreJSX\\": \\"all\\",
        \\"enforceForArrowConditionals\\": false
      }
    ],
    \\"no-floating-decimal\\": [
      \\"error\\"
    ],
    \\"no-global-assign\\": [
      \\"error\\",
      {
        \\"exceptions\\": []
      }
    ],
    \\"no-implicit-coercion\\": [
      \\"off\\",
      {
        \\"boolean\\": false,
        \\"number\\": true,
        \\"string\\": true,
        \\"allow\\": []
      }
    ],
    \\"no-magic-numbers\\": [
      \\"warn\\",
      {
        \\"ignore\\": [
          0,
          1,
          2,
          10
        ],
        \\"ignoreArrayIndexes\\": true,
        \\"enforceConst\\": true,
        \\"detectObjects\\": false
      }
    ],
    \\"no-multi-spaces\\": [
      \\"error\\",
      {
        \\"ignoreEOLComments\\": false
      }
    ],
    \\"no-new\\": [
      \\"error\\"
    ],
    \\"no-proto\\": [
      \\"error\\"
    ],
    \\"no-return-assign\\": [
      \\"error\\",
      \\"always\\"
    ],
    \\"no-return-await\\": [
      \\"error\\"
    ],
    \\"no-useless-return\\": [
      \\"error\\"
    ],
    \\"no-void\\": [
      \\"error\\"
    ],
    \\"prefer-promise-reject-errors\\": [
      \\"error\\",
      {
        \\"allowEmptyReject\\": true
      }
    ],
    \\"radix\\": [
      \\"error\\"
    ],
    \\"vars-on-top\\": [
      \\"error\\"
    ],
    \\"wrap-iife\\": [
      \\"error\\",
      \\"outside\\",
      {
        \\"functionPrototypeMethods\\": false
      }
    ],
    \\"yoda\\": [
      \\"error\\"
    ],
    \\"arrow-body-style\\": [
      \\"error\\",
      \\"as-needed\\",
      {
        \\"requireReturnForObjectLiteral\\": false
      }
    ],
    \\"arrow-spacing\\": [
      \\"error\\",
      {
        \\"before\\": true,
        \\"after\\": true
      }
    ],
    \\"generator-star-spacing\\": [
      \\"error\\",
      {
        \\"before\\": false,
        \\"after\\": true
      }
    ],
    \\"no-confusing-arrow\\": [
      \\"error\\",
      {
        \\"allowParens\\": true
      }
    ],
    \\"no-useless-constructor\\": [
      \\"off\\"
    ],
    \\"no-var\\": [
      \\"error\\"
    ],
    \\"object-shorthand\\": [
      \\"error\\",
      \\"always\\",
      {
        \\"ignoreConstructors\\": false,
        \\"avoidQuotes\\": true
      }
    ],
    \\"prefer-arrow-callback\\": [
      \\"warn\\",
      {
        \\"allowNamedFunctions\\": false,
        \\"allowUnboundThis\\": true
      }
    ],
    \\"prefer-const\\": [
      \\"warn\\",
      {
        \\"destructuring\\": \\"any\\",
        \\"ignoreReadBeforeAssign\\": true
      }
    ],
    \\"prefer-destructuring\\": [
      \\"warn\\",
      {
        \\"VariableDeclarator\\": {
          \\"array\\": false,
          \\"object\\": true
        },
        \\"AssignmentExpression\\": {
          \\"array\\": true,
          \\"object\\": true
        }
      },
      {
        \\"enforceForRenamedProperties\\": false
      }
    ],
    \\"prefer-numeric-literals\\": [
      \\"error\\"
    ],
    \\"prefer-rest-params\\": [
      \\"warn\\"
    ],
    \\"prefer-spread\\": [
      \\"warn\\"
    ],
    \\"prefer-template\\": [
      \\"warn\\"
    ],
    \\"symbol-description\\": [
      \\"error\\"
    ],
    \\"template-curly-spacing\\": [
      \\"error\\"
    ],
    \\"yield-star-spacing\\": [
      \\"error\\",
      \\"after\\"
    ],
    \\"import/no-named-as-default-member\\": [
      \\"error\\"
    ],
    \\"import/no-duplicates\\": [
      \\"error\\"
    ],
    \\"import/no-mutable-exports\\": [
      \\"error\\"
    ],
    \\"import/no-absolute-path\\": [
      \\"error\\"
    ],
    \\"import/no-dynamic-require\\": [
      \\"error\\"
    ],
    \\"import/no-named-default\\": [
      \\"error\\"
    ],
    \\"import/no-self-import\\": [
      \\"error\\"
    ],
    \\"import/no-useless-path-segments\\": [
      \\"error\\"
    ],
    \\"global-require\\": [
      \\"error\\"
    ],
    \\"no-buffer-constructor\\": [
      \\"error\\"
    ],
    \\"no-new-require\\": [
      \\"error\\"
    ],
    \\"no-path-concat\\": [
      \\"error\\"
    ],
    \\"no-shadow\\": [
      \\"error\\"
    ],
    \\"no-undef-init\\": [
      \\"error\\"
    ],
    \\"id-length\\": [
      \\"error\\",
      {
        \\"min\\": 4,
        \\"max\\": 40,
        \\"exceptions\\": [
          \\"i\\",
          \\"l\\",
          \\"id\\",
          \\"fs\\",
          \\"url\\",
          \\"uri\\",
          \\"map\\",
          \\"env\\",
          \\"err\\",
          \\"req\\",
          \\"res\\",
          \\"now\\",
          \\"raw\\",
          \\"key\\",
          \\"val\\",
          \\"obj\\",
          \\"pos\\",
          \\"row\\",
          \\"col\\",
          \\"min\\",
          \\"max\\",
          \\"CWD\\",
          \\"pkg\\",
          \\"css\\",
          \\"app\\",
          \\"api\\",
          \\"cli\\",
          \\"App\\",
          \\"API\\"
        ],
        \\"properties\\": \\"never\\"
      }
    ],
    \\"linebreak-style\\": [
      \\"error\\",
      \\"unix\\"
    ],
    \\"max-depth\\": [
      \\"error\\",
      {
        \\"maximum\\": 3
      }
    ],
    \\"max-len\\": [
      \\"error\\",
      {
        \\"code\\": 100,
        \\"comments\\": 140,
        \\"ignoreUrls\\": true,
        \\"tabWidth\\": 2
      }
    ],
    \\"max-params\\": [
      \\"error\\",
      3
    ],
    \\"max-statements\\": [
      \\"error\\",
      30,
      {
        \\"ignoreTopLevelFunctions\\": true
      }
    ],
    \\"max-statements-per-line\\": [
      \\"error\\",
      {
        \\"max\\": 2
      }
    ],
    \\"no-div-regex\\": [
      \\"error\\"
    ],
    \\"no-duplicate-imports\\": [
      \\"error\\"
    ],
    \\"no-extra-semi\\": [
      \\"error\\"
    ],
    \\"no-mixed-spaces-and-tabs\\": [
      \\"error\\"
    ],
    \\"no-nested-ternary\\": [
      \\"error\\"
    ],
    \\"no-param-reassign\\": [
      \\"error\\"
    ],
    \\"no-unmodified-loop-condition\\": [
      \\"error\\"
    ],
    \\"no-unneeded-ternary\\": [
      \\"error\\"
    ],
    \\"no-unused-vars\\": [
      \\"off\\"
    ],
    \\"no-use-before-define\\": [
      \\"off\\"
    ],
    \\"array-bracket-spacing\\": [
      \\"warn\\",
      \\"always\\",
      {
        \\"objectsInArrays\\": false
      }
    ],
    \\"arrow-parens\\": [
      \\"warn\\",
      \\"always\\"
    ],
    \\"camelcase\\": [
      \\"warn\\"
    ],
    \\"comma-dangle\\": [
      \\"warn\\",
      \\"never\\"
    ],
    \\"comma-style\\": [
      \\"warn\\",
      \\"last\\"
    ],
    \\"func-names\\": [
      \\"warn\\",
      \\"as-needed\\"
    ],
    \\"func-style\\": [
      \\"warn\\",
      \\"declaration\\",
      {
        \\"allowArrowFunctions\\": true
      }
    ],
    \\"indent\\": [
      \\"warn\\",
      2,
      {
        \\"SwitchCase\\": 1,
        \\"VariableDeclarator\\": 1,
        \\"outerIIFEBody\\": 0,
        \\"MemberExpression\\": 1,
        \\"FunctionExpression\\": {
          \\"body\\": 1,
          \\"parameters\\": 1
        },
        \\"CallExpression\\": {
          \\"arguments\\": 1
        },
        \\"flatTernaryExpressions\\": false,
        \\"ignoreComments\\": false
      }
    ],
    \\"no-multiple-empty-lines\\": [
      \\"warn\\",
      {
        \\"max\\": 4,
        \\"maxEOF\\": 1,
        \\"maxBOF\\": 0
      }
    ],
    \\"no-trailing-spaces\\": [
      \\"warn\\"
    ],
    \\"object-curly-spacing\\": [
      \\"warn\\",
      \\"always\\"
    ],
    \\"object-property-newline\\": [
      \\"warn\\",
      {
        \\"allowMultiplePropertiesPerLine\\": true,
        \\"allowAllPropertiesOnSameLine\\": false
      }
    ],
    \\"one-var-declaration-per-line\\": [
      \\"warn\\",
      \\"initializations\\"
    ],
    \\"operator-assignment\\": [
      \\"warn\\"
    ],
    \\"operator-linebreak\\": [
      \\"warn\\",
      \\"after\\"
    ],
    \\"semi\\": [
      \\"warn\\",
      \\"never\\"
    ],
    \\"space-before-function-paren\\": [
      \\"warn\\",
      {
        \\"named\\": \\"never\\",
        \\"anonymous\\": \\"never\\",
        \\"asyncArrow\\": \\"always\\"
      }
    ],
    \\"spaced-comment\\": [
      \\"warn\\",
      \\"always\\",
      {
        \\"exceptions\\": [
          \\"*\\",
          \\"=\\",
          \\"-\\"
        ]
      }
    ],
    \\"jsx-quotes\\": [
      \\"error\\",
      \\"prefer-double\\"
    ],
    \\"jsx-a11y/label-has-associated-control\\": [
      \\"error\\"
    ],
    \\"react/jsx-closing-bracket-location\\": [
      \\"error\\",
      \\"line-aligned\\"
    ],
    \\"react/jsx-closing-tag-location\\": [
      \\"error\\"
    ],
    \\"react/jsx-curly-spacing\\": [
      \\"error\\",
      \\"never\\",
      {
        \\"allowMultiline\\": true
      }
    ],
    \\"react/jsx-equals-spacing\\": [
      \\"error\\",
      \\"never\\"
    ],
    \\"react/jsx-first-prop-new-line\\": [
      \\"error\\",
      \\"multiline-multiprop\\"
    ],
    \\"react/jsx-indent\\": [
      \\"error\\",
      2
    ],
    \\"react/jsx-indent-props\\": [
      \\"error\\",
      2
    ],
    \\"react/jsx-max-props-per-line\\": [
      \\"error\\",
      {
        \\"maximum\\": 1,
        \\"when\\": \\"multiline\\"
      }
    ],
    \\"react/jsx-one-expression-per-line\\": [
      \\"error\\",
      {
        \\"allow\\": \\"single-child\\"
      }
    ],
    \\"react/jsx-props-no-multi-spaces\\": [
      \\"error\\"
    ],
    \\"react/jsx-tag-spacing\\": [
      \\"error\\",
      {
        \\"closingSlash\\": \\"never\\",
        \\"beforeSelfClosing\\": \\"always\\",
        \\"afterOpening\\": \\"never\\",
        \\"beforeClosing\\": \\"never\\"
      }
    ],
    \\"react/jsx-wrap-multilines\\": [
      \\"error\\",
      {
        \\"declaration\\": \\"parens-new-line\\",
        \\"assignment\\": \\"parens-new-line\\",
        \\"return\\": \\"parens-new-line\\",
        \\"arrow\\": \\"parens-new-line\\",
        \\"condition\\": \\"parens-new-line\\",
        \\"logical\\": \\"parens-new-line\\",
        \\"prop\\": \\"parens-new-line\\"
      }
    ],
    \\"react/self-closing-comp\\": [
      \\"error\\"
    ],
    \\"react/forbid-prop-types\\": [
      \\"error\\",
      {
        \\"forbid\\": [
          \\"any\\",
          \\"array\\",
          \\"object\\"
        ],
        \\"checkContextTypes\\": true,
        \\"checkChildContextTypes\\": true
      }
    ],
    \\"react/jsx-boolean-value\\": [
      \\"error\\",
      \\"never\\",
      {
        \\"always\\": []
      }
    ],
    \\"react/jsx-no-bind\\": [
      \\"error\\",
      {
        \\"ignoreRefs\\": true,
        \\"allowArrowFunctions\\": true,
        \\"allowFunctions\\": false,
        \\"allowBind\\": false,
        \\"ignoreDOMComponents\\": true
      }
    ],
    \\"react/no-danger\\": [
      \\"warn\\"
    ],
    \\"react/no-did-update-set-state\\": [
      \\"error\\"
    ],
    \\"react/no-will-update-set-state\\": [
      \\"error\\"
    ],
    \\"react/prefer-es6-class\\": [
      \\"error\\",
      \\"always\\"
    ],
    \\"react/prefer-stateless-function\\": [
      \\"warn\\",
      {
        \\"ignorePureComponents\\": true
      }
    ],
    \\"react/no-unused-prop-types\\": [
      \\"error\\",
      {
        \\"customValidators\\": [],
        \\"skipShapeProps\\": true
      }
    ],
    \\"react/no-array-index-key\\": [
      \\"error\\"
    ],
    \\"react/require-default-props\\": [
      \\"error\\",
      {
        \\"forbidDefaultForRequired\\": true
      }
    ],
    \\"react/void-dom-elements-no-children\\": [
      \\"error\\"
    ],
    \\"react/default-props-match-prop-types\\": [
      \\"error\\",
      {
        \\"allowRequiredDefaults\\": false
      }
    ],
    \\"react/no-redundant-should-component-update\\": [
      \\"error\\"
    ],
    \\"react/no-unused-state\\": [
      \\"error\\"
    ],
    \\"react/jsx-curly-brace-presence\\": [
      \\"error\\",
      {
        \\"props\\": \\"never\\",
        \\"children\\": \\"never\\"
      }
    ],
    \\"react/no-access-state-in-setstate\\": [
      \\"error\\"
    ],
    \\"react/button-has-type\\": [
      \\"error\\",
      {
        \\"button\\": true,
        \\"submit\\": true,
        \\"reset\\": false
      }
    ],
    \\"react/no-this-in-sfc\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/lang\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-angle-bracket-type-assertion\\": [
      \\"warn\\"
    ],
    \\"@typescript-eslint/no-array-constructor\\": [
      \\"warn\\"
    ],
    \\"@typescript-eslint/no-namespace\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-use-before-define\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/no-unused-vars\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/no-useless-constructor\\": [
      \\"warn\\"
    ],
    \\"react/prop-types\\": [
      \\"off\\"
    ],
    \\"import/export\\": [
      \\"off\\"
    ],
    \\"import/named\\": [
      \\"off\\"
    ],
    \\"no-restricted-globals\\": [
      \\"error\\",
      \\"addEventListener\\",
      \\"blur\\",
      \\"close\\",
      \\"closed\\",
      \\"confirm\\",
      \\"defaultStatus\\",
      \\"defaultstatus\\",
      \\"event\\",
      \\"external\\",
      \\"find\\",
      \\"focus\\",
      \\"frameElement\\",
      \\"frames\\",
      \\"history\\",
      \\"innerHeight\\",
      \\"innerWidth\\",
      \\"length\\",
      \\"location\\",
      \\"locationbar\\",
      \\"menubar\\",
      \\"moveBy\\",
      \\"moveTo\\",
      \\"name\\",
      \\"onblur\\",
      \\"onerror\\",
      \\"onfocus\\",
      \\"onload\\",
      \\"onresize\\",
      \\"onunload\\",
      \\"open\\",
      \\"opener\\",
      \\"opera\\",
      \\"outerHeight\\",
      \\"outerWidth\\",
      \\"pageXOffset\\",
      \\"pageYOffset\\",
      \\"parent\\",
      \\"print\\",
      \\"removeEventListener\\",
      \\"resizeBy\\",
      \\"resizeTo\\",
      \\"screen\\",
      \\"screenLeft\\",
      \\"screenTop\\",
      \\"screenX\\",
      \\"screenY\\",
      \\"scroll\\",
      \\"scrollbars\\",
      \\"scrollBy\\",
      \\"scrollTo\\",
      \\"scrollX\\",
      \\"scrollY\\",
      \\"self\\",
      \\"status\\",
      \\"statusbar\\",
      \\"stop\\",
      \\"toolbar\\",
      \\"top\\"
    ],
    \\"sort-imports\\": [
      \\"error\\",
      {
        \\"ignoreDeclarationSort\\": true,
        \\"ignoreCase\\": false,
        \\"ignoreMemberSort\\": false
      }
    ],
    \\"import/order\\": [
      \\"error\\"
    ],
    \\"import/newline-after-import\\": [
      \\"error\\"
    ],
    \\"import/default\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/no-object-literal-type-assertion\\": [
      \\"off\\"
    ],
    \\"react/jsx-child-element-spacing\\": [
      \\"off\\"
    ],
    \\"react/jsx-space-before-closing\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/func-call-spacing\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/indent\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/member-delimiter-style\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/no-extra-parens\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/semi\\": [
      \\"off\\"
    ],
    \\"@typescript-eslint/type-annotation-spacing\\": [
      \\"off\\"
    ],
    \\"lines-around-comment\\": [
      0
    ],
    \\"no-tabs\\": [
      0
    ],
    \\"quotes\\": [
      0
    ],
    \\"array-bracket-newline\\": [
      \\"off\\"
    ],
    \\"array-element-newline\\": [
      \\"off\\"
    ],
    \\"block-spacing\\": [
      \\"off\\"
    ],
    \\"brace-style\\": [
      \\"off\\"
    ],
    \\"comma-spacing\\": [
      \\"off\\"
    ],
    \\"computed-property-spacing\\": [
      \\"off\\"
    ],
    \\"eol-last\\": [
      \\"off\\"
    ],
    \\"func-call-spacing\\": [
      \\"off\\"
    ],
    \\"function-paren-newline\\": [
      \\"off\\"
    ],
    \\"generator-star\\": [
      \\"off\\"
    ],
    \\"implicit-arrow-linebreak\\": [
      \\"off\\"
    ],
    \\"indent-legacy\\": [
      \\"off\\"
    ],
    \\"key-spacing\\": [
      \\"off\\"
    ],
    \\"keyword-spacing\\": [
      \\"off\\"
    ],
    \\"multiline-ternary\\": [
      \\"off\\"
    ],
    \\"newline-per-chained-call\\": [
      \\"off\\"
    ],
    \\"no-arrow-condition\\": [
      \\"off\\"
    ],
    \\"no-comma-dangle\\": [
      \\"off\\"
    ],
    \\"no-reserved-keys\\": [
      \\"off\\"
    ],
    \\"no-space-before-semi\\": [
      \\"off\\"
    ],
    \\"no-spaced-func\\": [
      \\"off\\"
    ],
    \\"no-wrap-func\\": [
      \\"off\\"
    ],
    \\"nonblock-statement-body-position\\": [
      \\"off\\"
    ],
    \\"object-curly-newline\\": [
      \\"off\\"
    ],
    \\"padded-blocks\\": [
      \\"off\\"
    ],
    \\"quote-props\\": [
      \\"off\\"
    ],
    \\"semi-spacing\\": [
      \\"off\\"
    ],
    \\"semi-style\\": [
      \\"off\\"
    ],
    \\"space-after-function-name\\": [
      \\"off\\"
    ],
    \\"space-after-keywords\\": [
      \\"off\\"
    ],
    \\"space-before-blocks\\": [
      \\"off\\"
    ],
    \\"space-before-function-parentheses\\": [
      \\"off\\"
    ],
    \\"space-before-keywords\\": [
      \\"off\\"
    ],
    \\"space-in-brackets\\": [
      \\"off\\"
    ],
    \\"space-in-parens\\": [
      \\"off\\"
    ],
    \\"space-infix-ops\\": [
      \\"off\\"
    ],
    \\"space-return-throw-case\\": [
      \\"off\\"
    ],
    \\"space-unary-ops\\": [
      \\"off\\"
    ],
    \\"space-unary-word-ops\\": [
      \\"off\\"
    ],
    \\"switch-colon-spacing\\": [
      \\"off\\"
    ],
    \\"template-tag-spacing\\": [
      \\"off\\"
    ],
    \\"wrap-regex\\": [
      \\"off\\"
    ],
    \\"cypress/no-assigning-return-values\\": [
      \\"error\\"
    ],
    \\"cypress/no-unnecessary-waiting\\": [
      \\"error\\"
    ],
    \\"jest/no-alias-methods\\": [
      \\"warn\\"
    ],
    \\"jest/no-disabled-tests\\": [
      \\"warn\\"
    ],
    \\"jest/no-focused-tests\\": [
      \\"error\\"
    ],
    \\"jest/no-identical-title\\": [
      \\"error\\"
    ],
    \\"jest/no-jest-import\\": [
      \\"error\\"
    ],
    \\"jest/no-jasmine-globals\\": [
      \\"warn\\"
    ],
    \\"jest/no-test-prefixes\\": [
      \\"error\\"
    ],
    \\"jest/valid-describe\\": [
      \\"error\\"
    ],
    \\"jest/valid-expect\\": [
      \\"error\\"
    ],
    \\"jest/valid-expect-in-promise\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/click-events-have-key-events\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/control-has-associated-label\\": [
      \\"off\\",
      {
        \\"ignoreElements\\": [
          \\"audio\\",
          \\"canvas\\",
          \\"embed\\",
          \\"input\\",
          \\"textarea\\",
          \\"tr\\",
          \\"video\\"
        ],
        \\"ignoreRoles\\": [
          \\"grid\\",
          \\"listbox\\",
          \\"menu\\",
          \\"menubar\\",
          \\"radiogroup\\",
          \\"row\\",
          \\"tablist\\",
          \\"toolbar\\",
          \\"tree\\",
          \\"treegrid\\"
        ],
        \\"includeRoles\\": [
          \\"alert\\",
          \\"dialog\\"
        ]
      }
    ],
    \\"jsx-a11y/html-has-lang\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/interactive-supports-focus\\": [
      \\"error\\",
      {
        \\"tabbable\\": [
          \\"button\\",
          \\"checkbox\\",
          \\"link\\",
          \\"searchbox\\",
          \\"spinbutton\\",
          \\"switch\\",
          \\"textbox\\"
        ]
      }
    ],
    \\"jsx-a11y/label-has-for\\": [
      \\"off\\"
    ],
    \\"jsx-a11y/media-has-caption\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/mouse-events-have-key-events\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-autofocus\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-interactive-element-to-noninteractive-role\\": [
      \\"error\\",
      {
        \\"tr\\": [
          \\"none\\",
          \\"presentation\\"
        ]
      }
    ],
    \\"jsx-a11y/no-noninteractive-element-interactions\\": [
      \\"error\\",
      {
        \\"handlers\\": [
          \\"onClick\\",
          \\"onError\\",
          \\"onLoad\\",
          \\"onMouseDown\\",
          \\"onMouseUp\\",
          \\"onKeyPress\\",
          \\"onKeyDown\\",
          \\"onKeyUp\\"
        ],
        \\"alert\\": [
          \\"onKeyUp\\",
          \\"onKeyDown\\",
          \\"onKeyPress\\"
        ],
        \\"body\\": [
          \\"onError\\",
          \\"onLoad\\"
        ],
        \\"dialog\\": [
          \\"onKeyUp\\",
          \\"onKeyDown\\",
          \\"onKeyPress\\"
        ],
        \\"iframe\\": [
          \\"onError\\",
          \\"onLoad\\"
        ],
        \\"img\\": [
          \\"onError\\",
          \\"onLoad\\"
        ]
      }
    ],
    \\"jsx-a11y/no-noninteractive-element-to-interactive-role\\": [
      \\"error\\",
      {
        \\"ul\\": [
          \\"listbox\\",
          \\"menu\\",
          \\"menubar\\",
          \\"radiogroup\\",
          \\"tablist\\",
          \\"tree\\",
          \\"treegrid\\"
        ],
        \\"ol\\": [
          \\"listbox\\",
          \\"menu\\",
          \\"menubar\\",
          \\"radiogroup\\",
          \\"tablist\\",
          \\"tree\\",
          \\"treegrid\\"
        ],
        \\"li\\": [
          \\"menuitem\\",
          \\"option\\",
          \\"row\\",
          \\"tab\\",
          \\"treeitem\\"
        ],
        \\"table\\": [
          \\"grid\\"
        ],
        \\"td\\": [
          \\"gridcell\\"
        ]
      }
    ],
    \\"jsx-a11y/no-noninteractive-tabindex\\": [
      \\"error\\",
      {
        \\"tags\\": [],
        \\"roles\\": [
          \\"tabpanel\\"
        ]
      }
    ],
    \\"jsx-a11y/no-onchange\\": [
      \\"error\\"
    ],
    \\"jsx-a11y/no-static-element-interactions\\": [
      \\"error\\",
      {
        \\"handlers\\": [
          \\"onClick\\",
          \\"onMouseDown\\",
          \\"onMouseUp\\",
          \\"onKeyPress\\",
          \\"onKeyDown\\",
          \\"onKeyUp\\"
        ]
      }
    ],
    \\"jsx-a11y/tabindex-no-positive\\": [
      \\"error\\"
    ],
    \\"react/display-name\\": [
      2
    ],
    \\"react/jsx-key\\": [
      2
    ],
    \\"react/no-children-prop\\": [
      2
    ],
    \\"react/no-deprecated\\": [
      2
    ],
    \\"react/no-find-dom-node\\": [
      2
    ],
    \\"react/no-render-return-value\\": [
      2
    ],
    \\"react/no-string-refs\\": [
      2
    ],
    \\"react/no-unescaped-entities\\": [
      2
    ],
    \\"react/no-unknown-property\\": [
      2
    ],
    \\"react/no-unsafe\\": [
      0
    ],
    \\"import/no-named-as-default\\": [
      1
    ],
    \\"import/no-unresolved\\": [
      2
    ],
    \\"import/namespace\\": [
      2
    ],
    \\"@typescript-eslint/adjacent-overload-signatures\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/array-type\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/ban-types\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/camelcase\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/class-name-casing\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/explicit-function-return-type\\": [
      \\"warn\\"
    ],
    \\"@typescript-eslint/explicit-member-accessibility\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/interface-name-prefix\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-empty-interface\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-explicit-any\\": [
      \\"warn\\"
    ],
    \\"@typescript-eslint/no-inferrable-types\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-misused-new\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-non-null-assertion\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-parameter-properties\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-triple-slash-reference\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/no-var-requires\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/prefer-interface\\": [
      \\"error\\"
    ],
    \\"@typescript-eslint/prefer-namespace-keyword\\": [
      \\"error\\"
    ],
    \\"constructor-super\\": [
      \\"error\\"
    ],
    \\"for-direction\\": [
      \\"error\\"
    ],
    \\"no-async-promise-executor\\": [
      \\"error\\"
    ],
    \\"no-case-declarations\\": [
      \\"error\\"
    ],
    \\"no-class-assign\\": [
      \\"error\\"
    ],
    \\"no-compare-neg-zero\\": [
      \\"error\\"
    ],
    \\"no-constant-condition\\": [
      \\"error\\"
    ],
    \\"no-debugger\\": [
      \\"error\\"
    ],
    \\"no-empty\\": [
      \\"error\\"
    ],
    \\"no-extra-boolean-cast\\": [
      \\"error\\"
    ],
    \\"no-inner-declarations\\": [
      \\"error\\"
    ],
    \\"no-irregular-whitespace\\": [
      \\"error\\"
    ],
    \\"no-misleading-character-class\\": [
      \\"error\\"
    ],
    \\"no-prototype-builtins\\": [
      \\"error\\"
    ],
    \\"no-shadow-restricted-names\\": [
      \\"error\\"
    ],
    \\"no-unsafe-finally\\": [
      \\"error\\"
    ],
    \\"no-unsafe-negation\\": [
      \\"error\\"
    ],
    \\"no-useless-catch\\": [
      \\"error\\"
    ],
    \\"no-with\\": [
      \\"error\\"
    ],
    \\"require-atomic-updates\\": [
      \\"error\\"
    ]
  },
  \\"settings\\": {
    \\"import/resolver\\": {
      \\"babel-module\\": {
        \\"extensions\\": [
          \\".js\\",
          \\".jsx\\",
          \\".ts\\",
          \\".tsx\\",
          \\".json\\"
        ],
        \\"alias\\": {
          \\"-\\": \\"./src/\\"
        }
      },
      \\"node\\": {
        \\"extensions\\": [
          \\".js\\",
          \\".jsx\\",
          \\".ts\\",
          \\".tsx\\"
        ]
      }
    },
    \\"import/parsers\\": {
      \\"@typescript-eslint/parser\\": [
        \\".ts\\",
        \\".tsx\\"
      ]
    },
    \\"react\\": {
      \\"version\\": \\"detect\\"
    },
    \\"import/extensions\\": [
      \\".js\\",
      \\".jsx\\",
      \\".ts\\",
      \\".tsx\\"
    ]
  }
}"
`;

exports[`load config in eslint to validate all rule syntax is correct 1`] = `
Object {
  "errorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": "<text>",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": Array [],
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;

exports[`reports undeclared variable 1`] = `
Object {
  "errorCount": 1,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 1,
      "filePath": "<text>",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": Array [
        Object {
          "column": 1,
          "endColumn": 2,
          "endLine": 1,
          "line": 1,
          "message": "'i' is not defined.",
          "messageId": "undef",
          "nodeType": "Identifier",
          "ruleId": "no-undef",
          "severity": 2,
        },
      ],
      "source": "i++",
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;
